# diplom2020

./: .gitignore  CMakeLists.txt  README.md  ToolChain.cmake  run.sh
client/: Makefile
client/src/: TCPClient.cpp  client.cpp
server/: Makefile
server/src/: TCPServer.cpp  TCPServer.h  server.cpp
src/: algorithm.cpp  algorithm.hpp  config.hpp  constants.hpp  database.cpp  database.hpp  image.cpp  image.hpp  loger.cpp  loger.hpp  main.cpp
